# Mill

./: .gitignore  CMakeLists.txt  Doxyfile  Instrukcja_pl.txt  Makefile  README.md  board.c  board.h  fifo.c  fifo.h  logger.c  logger.h  main.c  my_button.c  my_button.h  player.c  player.h
html/: annotated.html  board_8h_source.html  classboard-members.html  classes.html  classmy__button-members.html  classpipes-members.html  classplayer-members.html  fifo_8h_source.html  files.html  graph_legend.html  index.html  logger_8h_source.html  my__button_8h_source.html  player_8h_source.html  structboard.html  structboard__coll__graph.md5  structmy__button.html  structmy__button__coll__graph.md5  structpipes.html  structplayer.html
html/search/: all_1.js  classes_2.js  searchdata.js
latex/: annotated.tex  refman.tex  structboard.tex  structboard__coll__graph.md5  structmy__button.tex  structmy__button__coll__graph.md5  structpipes.tex  structplayer.tex
